feat(problem 6): 연속으로 중복되는 닉네임의 사용자 리스트 추출 추가